--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body, h1, h2, h3, p, ul, li {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 17259; /* Гарнитура шрифта */
+    src: url(fonts/17259.ttf);
 }
 
 /* Стили для шапки */
